tests/errors/test_82.xpp
// Allocation of type void or void[]

fn main() void {
	let x = new void;
	let x = new void[2];
}
